Updated images and browser action
New icons and updated browser popup

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -1,17 +1,30 @@
-<!doctype html>
-<style type="text/css">
-	#mainPopup {
-		padding: 10px;
-		height: 200px;
-		width: 400px;
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
-	}
-	h1 {
-		font-size: 2em;
-	}
+<!DOCTYPE html>
+<style>
+html{
+width:500px;
+font:13px arial,sans-serif;
+}
 </style>
-
-<div id="mainPopup">
-<h1>Hello extensionizr!</h1>
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/browser_action/browser_action.html. The CSS is there, too.</p>
-</div>
+<html>
+<head>
+<title>Brightpearl Extension from Tamper Evident</title>
+</head>
+<body>
+	<h1>Brightpeal Extension</h1>
+	<p>Welcome to the Chrome browser Brightpearl Extension!  
+	This has been written to slightly modify the functionality of Brightpearl to reduce human error and speed up some processes</p>
+	<p>To get started, please head over to the <a href="/src/options_custom/index.html" target="_blank">Options</a> page to see a description of each modification and decide if to activate them or not.</p>
+	<p>You can find out more about the extension on <a href="https://github.com/b4Beta/brightpearl-extension">GitHub</a> where you are welcome to become part of the project.</p>
+	<p>
+		Written by <a
+			href="http://www.tamperevident.com.au/?utm_source=BPextension&utm_medium=Extension&utm_campaign=v2.0"
+			target="_blank">Tamper Evident</a>
+	</p>
+	<p>Please send feedback to feedback (at) tamperevident dot com dot
+		au - (to stop spam)</p>
+	<a
+		href="http://www.tamperevident.com.au/?utm_source=BPextension&utm_medium=Extension&utm_campaign=v2.0"
+		target="_blank"><img
+		src="../../icons/TamperEvidentLogoComplete380.png"></a>
+</body>
+</html>
