--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -14,7 +14,7 @@ font:13px arial,sans-serif;
 	<p>Welcome to the Chrome browser Brightpearl Extension!  
 	This has been written to slightly modify the functionality of Brightpearl to reduce human error and speed up some processes</p>
 	<p>To get started, please head over to the <a href="/src/options_custom/index.html" target="_blank">Options</a> page to see a description of each modification and decide if to activate them or not.</p>
-	<p>You can find out more about the extension on <a href="https://github.com/b4Beta/brightpearl-extension">GitHub</a> where you are welcome to become part of the project.</p>
+	<p>You can find out more about the extension on <a href="https://github.com/b4Beta/brightpearl-extension" target="_blank">GitHub</a> where you are welcome to become part of the project.</p>
 	<p>
 		Written by <a
 			href="http://www.tamperevident.com.au/?utm_source=BPextension&utm_medium=Extension&utm_campaign=v2.0"
